--- a/css/style.css
+++ b/css/style.css
@@ -55,4 +55,12 @@ img {
   /* flex-grow: 1; */
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.reduslim-form__column form label {
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  font-weight: 800;
+  color: #212121;
 }
